--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=WebStore;Trusted_Connection=True;MultipleActiveResultSets=true;Connection Timeout=30;"
   },
   "CustomHello" : "HelloFromConfiguration"
 }
